# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  checker  push_swap
includes/: push_swap.h  visual.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_ctoi.c  ft_delcontent.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspaces.c  ft_isupper.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpop.c  ft_lstprint.c  ft_lstpush_back.c  ft_lstremove_if.c  ft_ltoa.c  ft_ltoa_base.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+40 more)
sources/: add_to_stack.c  checker.c  draw_utils.c  draw_utils2.c  draw_utils3.c  ft_clear_stack.c  ft_lst_size.c  ft_max_in_list.c  ft_max_in_lst.c  ft_min_in_lst.c  ft_reverse_list.c  ft_sort.c  ft_sort_helper.c  handle_errors.c  instructions.c  operators.c  parser.c  positions.c  ps.c  push_swap.c  rolling.c  sort3_5.c  sort_3_or_5.c  sort_algorithm.c  temp.c  validation.c  visual.c
